FPVTL-2249 incorporating lint advice but checkstyle then needed an upgrade to cope with java 21